Bug 96993 - Images in PDF files opened with 5.1.0.0.beta 2 Draw are inverted.
Summary: Images in PDF files opened with 5.1.0.0.beta 2 Draw are inverted.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.1.0.0.beta1
Hardware: All All
: high critical
Assignee: Mike Kaganski
URL:
Whiteboard: target:5.2.0 target:5.1.1
Keywords: bibisected, bisected, regression
: 97227 97463 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-09 20:29 UTC by Gene Kohlenberg
Modified: 2016-10-25 19:08 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Original pdf created using Microsoft Publisher showing normal orientation of the images.. (1.08 MB, application/x-pdf)
2016-01-09 20:29 UTC, Gene Kohlenberg
Details
The 5.1.0.0.beta2 drawing file saved of the original pdf document. (982.96 KB, application/vnd.oasis.opendocument.graphics)
2016-01-09 20:33 UTC, Gene Kohlenberg
Details
The correct file showing the pdf file as a saved drawing file with inverted images. (985.12 KB, application/vnd.oasis.opendocument.graphics)
2016-01-09 20:44 UTC, Gene Kohlenberg
Details
Sample PDF transcript file created with Draw 5.0, exported to pdf (56.08 KB, application/pdf)
2016-02-18 02:42 UTC, Mark Appier
Details
Import of the Sample PDF transcript showing what happens to the images (39.75 KB, application/vnd.oasis.opendocument.graphics)
2016-02-18 02:43 UTC, Mark Appier
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gene Kohlenberg 2016-01-09 20:29:59 UTC
Created attachment 121821 [details]
Original pdf created using Microsoft Publisher showing normal orientation of the images..

When I open a pdf file created using Microsoft Publisher with 5.1.0.0.beta2, all images are inverted. If I open a pdf file created with Draw, the images are also inverted by 5.1.0.0.beta2.
Comment 1 Gene Kohlenberg 2016-01-09 20:33:48 UTC
Created attachment 121822 [details]
The 5.1.0.0.beta2 drawing file saved of the original pdf document.
Comment 2 m_a_riosv 2016-01-09 20:39:04 UTC
Hi @Gene, thanks for reporting.

Reproducible Win10x64
Version: 5.1.0.1 (x64) Build ID: bcace328aabc4c8c10b56daa87da0a2ee6579b5a
Threads 4; Ver: Windows 6.19; Render: default; 
Version: 5.2.0.0.alpha0+ Build ID: 22e5170af74c635cf55d089f97946b6dc86f82ad
CPU Threads: 4; OS Version: Windows 6.2; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-01-05_23:41:26


last working for me.
Version: 5.0.4.2 (x64) Build ID: 2b9802c1994aa0b7dc6079e128979269cf95bc78
Comment 3 Gene Kohlenberg 2016-01-09 20:41:38 UTC
Comment on attachment 121822 [details]
The 5.1.0.0.beta2 drawing file saved of the original pdf document.

I just discovered that this is an edited file not the raw file, so disregard. I'll attached the correct one next.
Comment 4 Gene Kohlenberg 2016-01-09 20:44:12 UTC
Created attachment 121823 [details]
The correct file showing the pdf file as a saved drawing file with inverted images.
Comment 5 ribotb 2016-01-12 10:39:14 UTC
Hi,

I reproduce with 
Version: 5.1.0.1
Build ID: bcace328aabc4c8c10b56daa87da0a2ee6579b5a
Threads 2; Ver: Windows 6.1; Render: default; 
Locale : fr-FR (fr_FR)

Bernard
Comment 6 Jean-Baptiste Faure 2016-01-18 21:11:39 UTC
*** Bug 97227 has been marked as a duplicate of this bug. ***
Comment 7 raal 2016-01-27 13:07:18 UTC
This seems to have begun at the below commit.
Adding Cc: to Mike Kaganski ; Could you possibly take a look at this one? Thanks
 c2bfd14715fe1f3e6b601f721ff6cfc04a84fd2c is the first bad commit
commit c2bfd14715fe1f3e6b601f721ff6cfc04a84fd2c
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Tue Nov 24 19:39:21 2015 -0800

    source ae0e830f9ace78b889713e7e74ce46f88fa21470

    source ae0e830f9ace78b889713e7e74ce46f88fa21470
author	Mike Kaganski <mike.kaganski@collabora.com>	2015-11-22 06:04:36 (GMT)
committer	Mike Kaganski <mikekaganski@hotmail.com>	2015-11-24 13:46:49 (GMT)
commit ae0e830f9ace78b889713e7e74ce46f88fa21470 (patch)
tdf#95970: Don't loose mirroring in SdrTextObj::TRSetBaseGeometry
Comment 8 Mike Kaganski 2016-01-28 08:39:59 UTC
Posted a patch to gerrit: https://gerrit.libreoffice.org/21870
Comment 9 Commit Notification 2016-02-01 16:29:47 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f8058b556d7ef23098bf6265f41e3f01f0529879

tdf#96993: remove obsolete vertical mirror hack from PDF import

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Jean-Baptiste Faure 2016-02-02 05:07:53 UTC
(In reply to Commit Notification from comment #9)
> Mike Kaganski committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=f8058b556d7ef23098bf6265f41e3f01f0529879
> 
> tdf#96993: remove obsolete vertical mirror hack from PDF import
> 
> It will be available in 5.2.0.

Thank you very much for this patch, it works as expected in the master.

Please, could you backport it to LO 5.1 branch ?

Best regards. JBF
Comment 11 Mike Kaganski 2016-02-02 05:24:40 UTC
Backport is pending: https://gerrit.libreoffice.org/22011
Comment 12 Jean-Baptiste Faure 2016-02-02 05:41:30 UTC
*** Bug 97463 has been marked as a duplicate of this bug. ***
Comment 13 Commit Notification 2016-02-02 10:54:03 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=11c865031cffc170d3db6b00fb48c683fb4ff070&h=libreoffice-5-1

tdf#96993: remove obsolete vertical mirror hack from PDF import

It will be available in 5.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Justin L 2016-02-12 08:23:30 UTC
Confirmed fixed with 5.2 Feb 8.
-imported PDF and images were not mirrored.  Exported to .odg which also opened properly.
Comment 15 Mark Appier 2016-02-18 02:40:15 UTC
It looks like I arrived a bit late to the bug squashing party--glad to see it has been worked on and the fix will become available!

Anyhow, I did reproduce it and after making the samples decided to go ahead and post them. For the people who fixed it, your work is appreciated!

Version: 5.1.0.3
Build ID: 5e3e00a007d9b3b6efb6797a8b8e57b51ab1f737
CPU Threads: 8; OS Version: Windows 6.2; UI Render: GL; 
Locale: en-US (en_US)
Comment 16 Mark Appier 2016-02-18 02:42:27 UTC
Created attachment 122749 [details]
Sample PDF transcript file created with Draw 5.0, exported to pdf
Comment 17 Mark Appier 2016-02-18 02:43:31 UTC
Created attachment 122750 [details]
Import of the Sample PDF transcript showing what happens to the images
Comment 18 steve 2016-02-18 07:40:30 UTC
Mark, the fix went into 5.1.1 so 5.0.3 will not have it.
Comment 19 Mike Kaganski 2016-02-18 07:53:01 UTC
(In reply to steve -_- from comment #18)
> Mark, the fix went into 5.1.1 so 5.0.3 will not have it.

5.0.3 doesn't need it because the regression is since 5.1.0.0.beta1