tdf#96993: remove obsolete vertical mirror hack from PDF import

Since commit ae0e830f9ace78b889713e7e74ce46f88fa21470, mirroring
is handled correctly in LO, so no need to handle it specially in
PDF import code. This obsolete handling causes double-mirroring.

Change-Id: Ia873f0426e444cafd80b24b7d209e90eb481d8f4
Reviewed-on: https://gerrit.libreoffice.org/21870
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Armin Le Grand <Armin.Le.Grand@cib.de>
(cherry picked from commit f8058b556d7ef23098bf6265f41e3f01f0529879)